PIP-292 Upgrade java to 17 and tidy up warnings